Closed Bug 370331 Opened 19 years ago Closed 17 years ago

Address bar changes if JavaScript bookmarklet for popup is clicked, but original page doesn't change

Categories

(Camino Graveyard :: Location Bar & Autocomplete, defect)

All
macOS
defect
Not set
minor

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: robin.adr, Assigned: chris)

References

()

Details

Attachments

(1 file)

1.67 KB, patch
bugzilla-graveyard
: review+
stuart.morgan+bugzilla
: superreview+
Details | Diff | Splinter Review
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.7) Gecko/20060911 Camino/1.0.3 Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.7) Gecko/20060911 Camino/1.0.3 I have a Ma.gnolia bookmarklet that I use to bookmark links on the fly, and if i click the link in the bookmarks toolbar, the location bar shows the javascript: URI, even though the original window doesn't change. And, no, it doesn't do this in Firefox :). Reproducible: Always Steps to Reproduce: 1. Add a javascript: bookmarklet to your bookmarks toolbar 2. Click the bookmark in the bookmarks toolbar. Actual Results: The location bar is changed to some long javascript: URI, though it was a popup that resulted and the original window's location is still the same. Expected Results: Left the location bar alone, since it isn't changing the location of the original window.
Confirmed in branch nightly.
URL: javascript:alert('Hello, world!')
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch Fix v1.0Splinter Review
Checks if the URL begins with javascript: before "blast[ing] it into the urlbar immediately".
Assignee: nobody → trendyhendy2000
Status: NEW → ASSIGNED
Attachment #337391 - Flags: review?(cl-bugs-new)
Bug 387312 changes the same line in BrowserWrapper as this one, so I could probably fix both bugs in the other's patch. That is, if this patch's strategy is OK.
Depends on: 387312
Should we take the same approach for bookmarked |data:| URIs? They can potentially execute in page context (and therefore changing the location bar doesn't make a lot of sense), but they can also end up putting new content in the content area (in which case changing the location bar *does* make sense). It's rare enough that I'd be OK with ignoring them, but I figured I'd at least bring it up. cl
Attachment #337391 - Flags: review?(cl-bugs-new) → review+
Comment on attachment 337391 [details] [diff] [review] Fix v1.0 r=me subject to the condition that we have some discussion about this approach. If we decide this is what we want to do, this definitely looks like a simple and proper way to do it.
Hardware: Macintosh → All
Comment on attachment 337391 [details] [diff] [review] Fix v1.0 smorgan said in the meeting he's OK with this approach and isn't worried about data: URIs, so this is OK by me.
Attachment #337391 - Flags: superreview?(stuart.morgan+bugzilla)
Comment on attachment 337391 [details] [diff] [review] Fix v1.0 sr=smorgan
Attachment #337391 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Landed on cvs trunk.
Blocks: 387312
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
No longer depends on: 387312
Resolution: --- → FIXED
verified with 2.0a1pre (1.9.0.3pre 2008091900)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: