Bug 370331 - Location bar changes if JavaScript bookmarklet for popup is clicked, but original page doesn't change, so don't 'blast' javascript URLs into the location bar. Patch by Christopher Henderson <trendyhendy2000@gmail.com>, r=cl, sr=smorgan